# My_Learn

./: .gitignore  NOTION_MCP_SETUP.md  README.md  chap1  emotions.pkl  learn_tf2.py
.roo/: mcp.json
DataWhale计算机视觉入门/: 图片缩放.py
LLM_Qwen3_character/: data_prepare.py  requiresment.txt
LLM_Skill/: P7_skill_with_the_kim_code_api.ipynb  README.md  api_comparison.md  blog-how-i-use-claude-code.md  cursor_add_skill.md  fibonacci.py  kimi_client.py  tt.md
LLM_prime/: 1_InternLM_Introduce.md  2_InternLM_demo_HW.md  2_InternLM_demo_doc.md  3_InternLM_langchain_HW.md  3_InternLM_langchain_doc.md  4_InternLM_Xtun_HW.md  4_InternLM_Xtun_doc.md  5_InternLM_Imdeploy_HW.md  5_InternLM_Imdeploy_doc.md  6_InternLM_opc_HW.md  6_InternLM_opc_doc.md  cmp.md  internlm_chat_7b_qlora_oasst1_e3_copy.py
LLM_prime2/: MOE.py
NLPHuggingFace/: Chapter10.py  Chapter11.py  Chapter2_TextClassification.py  Chapter3_TransformerAnotamy.py  Chapter5_TextGeberation.py  Chapter8-making-transformers-efficient-in-production.ipynb  Chapter9.py  Chapyter10_trainLoop.py  aa.ipynb  clinc_oos.py  find_huggingface_ip.py  my_transformer.py
course_cpp_ternsorrt/cmake_course/11.generator_expression/: CMakeLists.txt
course_cpp_ternsorrt/cmake_course/13.install_demo/: CMakeLists.txt  main.cpp
course_cpp_ternsorrt/cmake_course/13.install_demo/include/: dlib.h  slib.h
course_cpp_ternsorrt/cmake_course/13.install_demo/src/: dlib.cpp  slib.cpp
course_cpp_ternsorrt/cmake_course/14.find_demo/: CMakeLists.txt  main.cpp
course_cpp_ternsorrt/cmake_course/15.custom_find/custom_mod/: CMakeLists.txt
course_cpp_ternsorrt/cmake_course/15.custom_find/custom_mod/src/: dlib.cpp
course_cpp_ternsorrt/cmake_course/15.custom_find/find_demo/: CMakeLists.txt  main.cpp
course_cpp_ternsorrt/cmake_course/15.custom_find/find_demo/cmake/: Finddlib.cmake
course_cpp_ternsorrt/cmake_course/16.custom_install_demo/custom_mod/: CMakeLists.txt
course_cpp_ternsorrt/cmake_course/16.custom_install_demo/custom_mod/cmake/: dlibConfig.cmake.in
course_cpp_ternsorrt/cmake_course/16.custom_install_demo/custom_mod/install/config/: dlibConfig.cmake  dlibTarget-noconfig.cmake  dlibTarget.cmake
course_cpp_ternsorrt/cmake_course/16.custom_install_demo/custom_mod/install/include/: dlib.h
course_cpp_ternsorrt/cmake_course/16.custom_install_demo/custom_mod/src/: dlib.cpp
course_cpp_ternsorrt/cmake_course/16.custom_install_demo/find_test/: CMakeLists.txt  main.cpp
course_cpp_ternsorrt/cmake_course/17.demo_opencv/: CMakeLists.txt  main.cpp
course_cpp_ternsorrt/cmake_course/5.dynamic_lib_test/test_account/: CMakeLists.txt  main.cpp
course_cpp_ternsorrt/cmake_course/6.build_together/: CMakeLists.txt
course_cpp_ternsorrt/cmake_course/6.build_together/account_dir/: Account.cpp
course_cpp_ternsorrt/cmake_course/6.build_together/buil/: test_account
course_cpp_ternsorrt/course5_opencv/2.input_output/: CMakeLists.txt
course_cpp_ternsorrt/course5_opencv/2.input_output/src/: 1.img.cpp  2.video.cpp  3.cemera.cpp
course_cpp_ternsorrt/course5_opencv/3.img_operation/: CMakeLists.txt
course_cpp_ternsorrt/course5_opencv/3.img_operation/src/: 1.color_format.cpp  2.filtering.cpp  3.shape_adjust.cpp  4.drawing.cpp
course_cpp_ternsorrt/course5_opencv/4.ipc_cam/: CMakeLists.txt
course_cpp_ternsorrt/course5_opencv/4.ipc_cam/src/: main.cpp
course_cpp_ternsorrt/course5_opencv/4.ipc_cam/videos/: rtsp_server.yml  start_server.sh
course_cpp_ternsorrt/course5_opencv/5.face_detection/: CMakeLists.txt
course_cpp_ternsorrt/course5_opencv/5.face_detection/src/: face_detect.cpp
course_cpp_ternsorrt/course5_opencv/6.trt_basic/: CMakeLists.txt
course_cpp_ternsorrt/course5_opencv/6.trt_basic/cmake/: FindTensorRT.cmake
course_cpp_ternsorrt/course5_opencv/6.trt_basic/model/: mlp.engine
course_cpp_ternsorrt/course5_opencv/6.trt_basic/src/: build.cpp  mlp_veri.ipynb  runtime.cu
course_cpp_ternsorrt/course8_faceNet/: CMakeLists.txt  Dockerfile  run_shell_code.sh
course_cpp_ternsorrt/course8_faceNet/facenet_trt/: CMakeLists.txt  build.cu  facedet_test.cpp  facenet_test.cpp
course_cpp_ternsorrt/course8_faceNet/facenet_trt/src/: engine.cu  facenet.h
course_cpp_ternsorrt/course8_faceNet/facenet_trt/src/utils/: postprocess.cpp  postprocess.h  preprocess.cpp
course_cpp_ternsorrt/course8_faceNet/factnet_export/: FACENET.py  export.py
course_cpp_ternsorrt/course8_faceNet/src/: engine.h  facedet.cpp  facedet.h
course_cpp_ternsorrt/course8_faceNet/src/utils/: draw.cpp  types.h
course_cpp_ternsorrt/course8_nanoApp/: CMakeLists.txt  build.cu  face_list.txt  run_app.sh  stream.cpp
course_cpp_ternsorrt/course8_nanoApp/TAO/: detect.engine  tao-converter
course_cpp_ternsorrt/course8_nanoApp/rtmp_server/: rtsp-simple-server-full.yml  rtsp-simple-server.yml  start_server.sh
course_cpp_ternsorrt/course8_nanoApp/src/: attribute.cpp  attribute.h  engine.cu  engine.h  facedet.cpp  facedet.h  facenet.cpp  facenet.h
course_cpp_ternsorrt/course8_nanoApp/src/utils/: draw.cpp  draw.h  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h  types.h
course_cpp_ternsorrt/course8_nanoApp/streamer/: CMakeLists.txt  streamer.cpp  streamer.hpp
deepSpeed/: requirement.txt
docs/: README.md  _coverpage.md  _sidebar.md  index.html
ltcd/: isMarch.cpp  正则匹配.py
pyspark/: README.md
release/: 12.switch_demo  13.switch_enum  14.for_demo  16.do_while_demo  17.cstr_demo  18.cpp_str_demo  3.var_warning  4.room_square  5.data_type  6.sizeof_demo  7.const_demo  8.array_demo  9.vector  main
tf2/: README.md  learn_tf2.py  learn_tf2_10&卷积神经网络(1).py  learn_tf2_10&卷积神经网络(2).py  learn_tf2_10&卷积神经网络(3).py  learn_tf2_10&卷积神经网络_CIFAR10_VGG13实战.py  learn_tf2_10&卷积神经网络_LeNet-5实战.py  learn_tf2_10&卷积神经网络_RestNet18实战.py  learn_tf2_11&循环神经网络(1).py  learn_tf2_11&循环神经网络(1)_情感分类实战.py  learn_tf2_11&循环神经网络(2)_情感分类实战.py  learn_tf2_11&循环神经网络(3).py  learn_tf2_4&基础(1).py  learn_tf2_4&基础(2).py  learn_tf2_4&基础_实战反向传播.py  learn_tf2_5&进阶(1).py  learn_tf2_5&进阶(2).py  learn_tf2_6&神经网络(1).py  learn_tf2_6&神经网络(2).py  learn_tf2_7&反向传播算法(1)_求导基础.py  learn_tf2_7&反向传播算法(2)_求导进阶.py  (+13 more)
(+272 files in other folders)
